--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8081
 server.error.include-message=always
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.100.1:3306/utms_talentboost?createDatabaseIfNotExist=true&amp
+spring.datasource.url=jdbc:mysql://192.168.56.1:3306/utms_talentboost?createDatabaseIfNotExist=true&amp
+#spring.datasource.url=jdbc:mysql://localhost:3306/utms_talentboost?createDatabaseIfNotExist=true&amp
 spring.datasource.username=root
 spring.datasource.password=root
 #JPA Properties
